# simple-chat

./: Cargo.toml  README.md  planning.md
crates/client/: Cargo.toml  run.sh
crates/client/src/: cli.rs  config.rs  lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: command.rs  config.rs  connection.rs  lib.rs
crates/common/tests/: integration.rs
crates/server/: Cargo.toml  run.sh
crates/server/src/: command.rs  connection.rs  lib.rs  main.rs  user.rs  user_pool.rs
src/client/: Cargo.toml  run.sh
src/client/src/: config.rs  main.rs
src/server/: Cargo.toml
src/server/src/: main.rs
tests/: integration.rs
