[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "client"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
clap = { version = "4.5.17", features = ["derive"] }
common = { path = "../common" }
log = "0.4.22"
env_logger = "0.11.5"
futures-util = { version = "0.3.30", features = ["sink"] }