[package]
name = "common"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.40.0", features = ["macros", "io-util", "net", "rt-multi-thread", "sync", "time"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tokio-util = { version = "0.7.12", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"]}
envy = "0.4.2"

[dev-dependencies]
client = { path = "../client" }
server = { path = "../server" }
